# SPDX-FileCopyrightText: The rpds-pathtree authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "rpds-pathtree"
description = "Immutable, path-addressable tree data structure"
version = "0.0.23"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/rpds-pathtree"
categories = ["data-structures"]
keywords = ["immutable", "tree", "path"]
edition = "2021"
include = ["/src", "/README.md", "/LICENSES"]

[dependencies]
derive_more = "0.99.17"
log = "0.4.20"
thiserror = "1.0.50"

rpds = "1.1.0"

[features]
"default" = []
"sync" = []
